# opencode-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  update.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri-key.pem.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: DateFilter.tsx  ErrorBoundary.tsx  JsonPreview.tsx  Layout.tsx  Skeleton.tsx  Titlebar.tsx
src/hooks/: useAutoRefresh.ts  useDb.ts
src/pages/: Analytics.tsx  Dashboard.tsx  Projects.tsx  Sessions.tsx  Settings.tsx
src/store/: useStore.ts
src/types/: index.ts
src/utils/: format.ts  model.ts  project.ts
